UI distortion fix on portal
Issue-Id : ACUMOS-1578
Description: UI is displaying distorted on header when shared user have
profile pic and also white strip is displaying

--- a/acumos-portal-fe/src/main/webapp/css/model-workflow.css
+++ b/acumos-portal-fe/src/main/webapp/css/model-workflow.css
@@ -1615,6 +1615,9 @@ position:relative;
 /* editor changes end*/
 .response.commenttable{max-height:520px; overflow-y:auto;}
 
+md-menu-content {webkit-box-shadow: 2px 0px 5px 3px rgba(0,0,0,0.1);
+    -moz-box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.1);
+    box-shadow: 0px 0px 5px 3px rgba(0,0,0,0.1);}
 #solImage{position: absolute; width: 65%;}
 #solImage .upload-txtbox{width: 100%;}
 
